--- a/HTML/baby-maker.html
+++ b/HTML/baby-maker.html
@@ -34,7 +34,9 @@
             <p class="invalid-args">Enter Values Into Input Boxes</p><br><br>
 
             <button class="finalizeCreate" onclick="pressFinalizeCreate()">Create</button>
-            <button class="neverMind" onclick="pressNeverMind()">Never Mind</button><br><br>
+            <button class="neverMind" onclick="pressNeverMind()">Never Mind</button><br>
+            
+            <p class="selecter-text">Select the Male</p><br>
 
             <div class="person-container"></div><br><br>
         </div>
