--- a/HTML/activities.html
+++ b/HTML/activities.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <ul class="navbar">
-            <li class="nav-item-left nav-title"><a href="">Interactive Bio</a></li>
+            <li class="nav-item-left nav-title"><a href="home.html">Interactive Bio</a></li>
             <li class="nav-item-left nav-text"><a href="">Activities</a></li>
             <li class="nav-item-right nav-text"><a href="">About</a></li>
         </ul>
@@ -31,6 +31,15 @@
                     Match DNA, match DNA and RNA, and use the translation chart to match up RNA with it's corresponding Amino Acid.
                 </div><br>
                 <a href="dna-coder.html"><div class="activity-btn">Try This Activity</div></a>
+            </div>
+
+            <br><br><div class="activity-box">
+                <div class="activity-name">Baby Maker</div><br>
+                <div class="activity-text">
+                    Create random people and view the phenotypes and genotypes that they have.
+                    You can also view what a potential baby could look like between a man and a woman.
+                </div><br>
+                <a href="baby-maker.html"><div class="activity-btn">Try This Activity</div></a>
             </div>
         </div>
     </body>
