--- a/HTML/baby-maker.html
+++ b/HTML/baby-maker.html
@@ -4,18 +4,17 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Experiment with Genotypes and Phenotypes by creating random people and viewing what potential babies could look like.">
+        <meta name="description" content="Create random people and view the phenotypes and genotypes that they have.
+        You can also view what a potential baby could look like between a man and a woman.">
         <title>Baby Maker</title>
 
         <link rel="stylesheet" href="../CSS/main-navbar.css">
         <link rel="stylesheet" href="../CSS/baby-maker.css">
         <link rel="stylesheet" href="../CSS/style.css">
-
-        <script src="https://kit.fontawesome.com/3c60254cfe.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <ul class="navbar">
-            <li class="nav-item-left nav-title"><a href="">Interactive Bio</a></li>
+            <li class="nav-item-left nav-title"><a href="home.html">Interactive Bio</a></li>
             <li class="nav-item-left nav-text"><a href="activities.html">Activities</a></li>
             <li class="nav-item-right nav-text"><a href="">About</a></li>
         </ul><br>
@@ -35,6 +34,10 @@
 
             <button class="finalizeCreate" onclick="pressFinalizeCreate()">Create</button>
             <button class="neverMind" onclick="pressNeverMind()">Never Mind</button><br>
+
+            <div class="baby-container"></div>
+
+            <br><button class="ok-baby" onclick="okBaby()">OK</button><br>
             
             <p class="selecter-text">Select the Male</p><br>
 
