Home menu overhaul and some dna coding bug fixes

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -1,36 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Bio - Interactive Biology Activities</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Interactive Bio - Interactive Biology Activities</title>
 
-    <link rel="stylesheet" href="../CSS/main-navbar.css">
-    <link rel="stylesheet" href="../CSS/home.css">
-    <link rel="stylesheet" href="../CSS/style.css">
-</head>
-<body>
-    <ul class="navbar">
-        <li class="nav-item-left nav-title"><a href="">Interactive Bio</a></li>
-        <li class="nav-item-left nav-text"><a href="activities.html">Activities</a></li>
-        <li class="nav-item-right nav-text"><a href="">About</a></li>
-    </ul><br>
+        <link rel="stylesheet" href="../CSS/main-navbar.css">
+        <link rel="stylesheet" href="../CSS/home.css">
+        <link rel="stylesheet" href="../CSS/style.css">
 
-    <div class="center">
-        <p class="main-title">Interactive Bio</p><br>
+        <script src="https://kit.fontawesome.com/3c60254cfe.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <ul class="navbar">
+            <li class="nav-item-left nav-title"><a href="">Interactive Bio</a></li>
+            <li class="nav-item-left nav-text"><a href="activities.html">Activities</a></li>
+            <li class="nav-item-right nav-text"><a href="">About</a></li>
+        </ul><br><br>
 
-        <div class="box">
-            <br><p class="activities-about">Complete Activities About...</p><br>
-            <div class="activities-to-do">
-                <p>-  DNA -</p>
-                <p>- RNA -</p>
-                <p>- Amino Acids -</p>
-                <p>- Phenotypes -</p>
-                <p>- Genotypes -</p>
-            </div><br><br>
-            <a href="activities.html"><div class="activity-btn">Go See Activities</div></a><br><br>
-        </div>
-    </div>
-</body>
+        <p class="main-title">Interactive Biology Activities</p><br><br><br>
+
+        <p class="fun-and-free">Complete <span class="fun-and-free-bold">fun and free</span> biology activities and learn about...</p>
+
+        <br><br><br><div class="activities-about-selector">
+            <button class="activities-btn-left" onclick="moveLeft()"><i class="fa-solid fa-arrow-left"></i></button>
+            <div class="activities-about-text">DNA</div>
+            <button class="activities-btn-right" onclick="moveRight()"><i class="fa-solid fa-arrow-right"></i></button>
+        </div><br><br><br>
+
+        <!-- <div class="main-img">
+            <img src="../Screenshot 2023-01-16 162613.png">
+        </div> -->
+
+        <!-- <div class="center">
+            <div class="box">
+                <br><p class="activities-about">Complete Activities About...</p><br>
+                <div class="activities-to-do">
+                    <p>- DNA -</p>
+                    <p>- RNA -</p>
+                    <p>- Amino Acids -</p>
+                    <p>- Phenotypes -</p>
+                    <p>- Genotypes -</p>
+                </div><br><br>
+                <a href="activities.html"><div class="activity-btn">Go See Activities</div></a><br><br>
+            </div>
+        </div> -->
+
+        <script src="../src/JS/home.js"></script>
+    </body>
 </html>
