--- a/HTML/activities.html
+++ b/HTML/activities.html
@@ -40,7 +40,7 @@
                     You can also view what a potential baby could look like between a man and a woman.
                 </div><br>
                 <a href="baby-maker.html"><div class="activity-btn">Try This Activity</div></a>
-            </div>
+            </div><br>
         </div>
     </body>
 </html>
