--- a/HTML/home.html
+++ b/HTML/home.html
@@ -22,7 +22,12 @@
         <div class="center-if">
             <p class="main-title">Interactive Biology Activities</p><br><br><br>
     
+            <!-- <div class="dna-img">
+                <img src="../Images/home-dna.jpg">
+            </div> -->
+
             <p class="fun-and-free">Complete <span class="fun-and-free-bold">fun and free</span> biology activities and learn about...</p>
+
     
             <br><br><br><div class="activities-about-selector">
                 <button class="activities-btn-left" onclick="moveLeft()"><i class="fa-solid fa-arrow-left"></i></button>
@@ -33,7 +38,6 @@
             <a class="activity-btn" href="activities.html">Try Them Out Now</a>
             <a class="learn-more"><u>Learn More</u></a><br><br>
         </div>
-
 
         <!-- <div class="main-img">
             <img src="../Screenshot 2023-01-16 162613.png">
