--- a/HTML/activities.html
+++ b/HTML/activities.html
@@ -21,8 +21,8 @@
         <br>
 
         <div class="center">
-            <h1 style="color: white;">Currently there are 2 activities available</h1>
-            <br><h3 style="color: white;">With more on the way!</h3>
+            <h1 style="color: #E7DECC;">Currently there are 2 activities available</h1>
+            <br><h3 style="color: #E7DECC;">With more on the way!</h3>
 
             <br><br><div class="activity-box">
                 <div class="activity-name">DNA Coding</div><br>
