--- a/HTML/activities.html
+++ b/HTML/activities.html
@@ -22,17 +22,25 @@
 
         <div class="center">
             <h1 style="color: #E7DECC;">Currently there are 2 activities available</h1>
-            <br><h3 style="color: #E7DECC;">With more on the way!</h3>
+            <br><h3 style="color: #E7DECC;">With more on the way!</h3><br>
+        </div>
 
-            <br><br><div class="activity-box">
-                <div class="activity-name">DNA Coding</div><br>
-                <div class="activity-text">
-                    Choose between three options to match DNA/RNA/Amino Acid. 
-                    Match DNA, match DNA and RNA, and use the translation chart to match up RNA with it's corresponding Amino Acid.
-                </div><br>
+        <div class="activity-container">
+            <div class="activity-explanation">
+                <h1>DNA Coder</h1><br>
+                <p>Choose between three different DNA related matching activities:</p><br>
+                <p>Matching DNA</p>
+                <p>DNA to RNA</p>
+                <p>RNA to Amino Acid</p><br>
+                <p>Use the translation chart to translate RNA into it's corresponding Amino Acid</p><br>    
                 <a href="dna-coder.html"><div class="activity-btn">Try This Activity</div></a>
             </div>
+            <div class="activity-img">
+                <img src="../Images/activities-dna.jpg" width="697.125" height="392">
+            </div>
+        </div><br><br>
 
+        <div class="center">
             <br><br><div class="activity-box">
                 <div class="activity-name">Baby Maker</div><br>
                 <div class="activity-text">
