--- a/HTML/activities.html
+++ b/HTML/activities.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Interactive Biology Activities">
         <title>Activities</title>
 
+
         <link rel="stylesheet" href="../CSS/main-navbar.css">
         <link rel="stylesheet" href="../CSS/style.css">
         <link rel="stylesheet" href="../CSS/activities.css">
@@ -18,12 +19,15 @@
             <li class="nav-item-right nav-text"><a href="">About</a></li>
         </ul>
 
-        <br>
+
+        <br><br><br><br>
+
 
         <div class="center">
             <h1 style="color: #E7DECC;">Currently there are 2 activities available</h1>
             <br><h3 style="color: #E7DECC;">With more on the way!</h3><br>
         </div>
+
 
         <div class="activity-container">
             <div class="activity-explanation">
@@ -35,20 +39,21 @@
                 <p>Use the translation chart to translate RNA into it's corresponding Amino Acid</p><br>    
                 <a href="dna-coder.html"><div class="activity-btn">Try This Activity</div></a>
             </div>
-            <div class="activity-img">
-                <img src="../Images/activities-dna.jpg" width="697.125" height="392">
+            <div class="activity-img dna"></div>
+        </div><br>
+
+
+        <div class="activity-container reverse">
+            <div class="activity-img gene"></div>
+            <div class="activity-explanation">
+                <h1>Baby Maker</h1><br>
+                <p>Create randomly generated human beings and view their phenotypes and genotypes such as:</p><br>
+                <p>Hair Color</p>
+                <p>Skin Color</p>
+                <p>Hair length</p><br>
+                <p>You can also see what a potential child could look like between two humans.</p><br>    
+                <a href="baby-maker.html"><div class="activity-btn">Try This Activity</div></a>
             </div>
         </div><br><br>
-
-        <div class="center">
-            <br><br><div class="activity-box">
-                <div class="activity-name">Baby Maker</div><br>
-                <div class="activity-text">
-                    Create random people and view the phenotypes and genotypes that they have.
-                    You can also view what a potential baby could look like between a man and a woman.
-                </div><br>
-                <a href="baby-maker.html"><div class="activity-btn">Try This Activity</div></a>
-            </div><br>
-        </div>
     </body>
 </html>
