Start on atom creator

--- a/HTML/activities.html
+++ b/HTML/activities.html
@@ -24,7 +24,7 @@
 
 
         <div class="center">
-            <h1 style="color: #E7DECC;">Currently there are 2 activities available</h1>
+            <h1 style="color: #E7DECC;">Currently there are 3 activities available</h1>
             <br><h3 style="color: #E7DECC;">With more on the way!</h3><br>
         </div>
 
@@ -36,7 +36,7 @@
                 <p>Matching DNA</p>
                 <p>DNA to RNA</p>
                 <p>RNA to Amino Acid</p><br>
-                <p>Use the translation chart to translate RNA into it's corresponding Amino Acid</p><br>    
+                <p>Use the translation chart to translate RNA into it's corresponding Amino Acid.</p><br>    
                 <a href="dna-coder.html"><div class="activity-btn">Try This Activity</div></a>
             </div>
             <div class="activity-img dna"></div>
@@ -54,6 +54,19 @@
                 <p>You can also see what a potential child could look like between two humans.</p><br>    
                 <a href="baby-maker.html"><div class="activity-btn">Try This Activity</div></a>
             </div>
+        </div><br>
+
+        <div class="activity-container reverse">
+            <div class="activity-explanation">
+                <h1>Atom Creator</h1><br>
+                <p>Generate your own atom and view the element that corresponds with the atom created and see data like:</p><br>
+                <p>Melting Point</p>
+                <p>Density</p>
+                <p>Boiling Point</p><br>
+                <p>You can do this by editing the number of neutrons, protons, and electrons.</p><br>    
+                <a href="atom-creator.html"><div class="activity-btn">Try This Activity</div></a>
+            </div>
+            <div class="activity-img atom"></div>
         </div><br><br>
     </body>
 </html>
