Remove reverse from atom tag

--- a/HTML/activities.html
+++ b/HTML/activities.html
@@ -51,7 +51,7 @@
             </div>
         </div><br>
 
-        <div class="activity-container reverse">
+        <div class="activity-container">
             <div class="activity-explanation">
                 <h1>Atom Creator</h1><br>
                 <p>Generate your own atom and view the element that corresponds with the atom created and see data like:</p><br>
