--- a/HTML/activities.html
+++ b/HTML/activities.html
@@ -41,13 +41,13 @@
         <div class="activity-container reverse">
             <div class="activity-img gene"></div>
             <div class="activity-explanation">
-                <h1>Baby Maker</h1><br>
+                <h1>Genetic Simulation</h1><br>
                 <p>Create randomly generated human beings and view their phenotypes and genotypes such as:</p><br>
                 <p>Hair Color</p>
                 <p>Skin Color</p>
                 <p>Hair length</p><br>
                 <p>You can also see what a potential child could look like between two humans.</p><br>    
-                <a href="baby-maker.html"><div class="activity-btn">Try This Activity</div></a>
+                <a href="genetic-simulation.html"><div class="activity-btn">Try This Activity</div></a>
             </div>
         </div><br>
 
