--- a/HTML/genetic-simulation.html
+++ b/HTML/genetic-simulation.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Create random people and view the phenotypes and genotypes that they have.
         You can also view what a potential baby could look like between a man and a woman.">
-        <title>Baby Maker</title>
+        <title>Genetic Simulation</title>
 
         <link rel="stylesheet" href="../CSS/main-navbar.css">
-        <link rel="stylesheet" href="../CSS/baby-maker.css">
+        <link rel="stylesheet" href="../CSS/genetic-simulation.css">
         <link rel="stylesheet" href="../CSS/style.css">
     </head>
     <body>
@@ -19,7 +19,7 @@
             <li class="nav-item-right nav-text"><a href="">About</a></li>
         </ul><br><br><br><br>
        
-        <div class="baby-maker-title">Baby Maker</div><br>
+        <div class="genetic-simulation-title">Genetic Simulation</div><br>
 
         <div class="center">
             <button class="randomPerson" onclick="pressCreateRandomPerson()">Create a New Random Person</button>
@@ -44,7 +44,7 @@
             <div class="person-container"></div><br><br>
         </div>
 
-        <script src="../src/JS/baby-maker-person.js"></script>
-        <script src="../src/JS/baby-maker.js"></script>
+        <script src="../src/JS/genetic-simulation-person.js"></script>
+        <script src="../src/JS/genetic-simulation.js"></script>
     </body>
 </html>
