--- a/HTML/atom-creator.html
+++ b/HTML/atom-creator.html
@@ -28,52 +28,7 @@
                         <div class="atom-ring">
                             <div class="atom-ring">
                                 <div class="atom-ring">
-                                    <div class="atom-ring">
-                                        <div class="nucleus">
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="proton molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                            <div class="neutron molecule"></div>
-                                        </div>
-                                    </div>
+                                    <div class="nucleus"></div>
                                 </div>
                             </div>
                         </div>
@@ -82,6 +37,23 @@
             </div>
         </div>
 
+        <div class="center">
+            <span class="amounts">
+                <span class="proton-amount" style="color: cyan;">0 Protons</span> /
+                <span class="neutron-amount" style="color: crimson">0 Neutrons</span> /
+                <span class="electron-amount" style="color: greenyellow">0 Electrons</span>
+            </span><br><br>
+            <input class="proton-selector number-selector" type="text" placeholder="Protons">
+            <br><br><div class="element-box">
+                <div class="element-num">1</div><br>
+                <div class="element-symbol">H</div><br>
+                <div class="element-name">Rutherfordium</div>
+                <div class="element-mass">0</div>
+            </div><br><br>
+            <div class="other-info" style="color: white; word-break: break-all;"></div><br><br><br><br>
+        </div>
+        
+        <script src="../src/JS/periodic-table.js"></script>
         <script src="../src/JS/atom-creator.js"></script>
     </body>
 </html>
