--- a/HTML/home.html
+++ b/HTML/home.html
@@ -28,7 +28,7 @@
 
             <br><br><br><div class="activities-about-selector">
                 <button class="activities-btn-left" onclick="moveLeft()"><i class="fa-solid fa-arrow-left"></i></button>
-                <div class="activities-about-text">DNA</div>
+                <div class="activities-about-text"></div>
                 <button class="activities-btn-right" onclick="moveRight()"><i class="fa-solid fa-arrow-right"></i></button>
             </div><br><br><br>
    
