Atom creator problems

--- a/HTML/atom-creator.html
+++ b/HTML/atom-creator.html
@@ -55,8 +55,16 @@
                 <div class="other-info" style="color: white; word-break: break-all;"></div><br><br><br><br>
             </div>
         </div>
-        <div class="problem-section">
-            
+        <div class="problem-section" style="color: white;">
+            <div class="center">
+                <br><p class="problem-text"></p><br>
+                <p>Enter the value without any decimal places</p><br>
+                <p class="attempts" style="color: #E7DECC">No Problem Submitted</p>
+                <p class="accuracy" style="color: #E7DECC">No Problem Submitted</p><br>
+                <label for="answer" class="answer-label"></label>
+                <input type="text" class="answer" name="answer" placeholder="Answer"><br><br>
+                <button class="submit" onclick="pressAtomSubmit()">Submit</button><br><br>
+            </div>
         </div>
         
         <script src="../src/JS/periodic-table.js"></script>
