--- a/HTML/about.html
+++ b/HTML/about.html
@@ -4,23 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Error</title>
+    <title>About</title>
 
+    <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/main-navbar.css">
 </head>
 <body>
     <ul class="navbar">
         <li class="nav-item-left nav-title"><a href="home.html">Interactive Bio</a></li>
-        <li class="nav-item-left nav-text"><a href="">Activities</a></li>
+        <li class="nav-item-left nav-text"><a href="activities.html">Activities</a></li>
         <li class="nav-item-right nav-text"><a href="about.html">About</a></li>
-    </ul>
+    </ul><br><br><br>
 
-    <br><br><br><br><br>
-
-    <div style="text-align: center; color: white;">
-        <h1 style="font-size: 150px;">404</h1>
-        <h1>Uh-Oh!</h1><br><br>
-        <h3>That page doesn't exist, but you can go <a href="home.html">here</a> to see all the activities offered.</h3>
+    <div class="center" style="color: white;">
+        <h3>I'm just a highschool student makin websites.</h3>
     </div>
 </body>
 </html>
