--- a/HTML/home.html
+++ b/HTML/home.html
@@ -16,7 +16,7 @@
         <ul class="navbar">
             <li class="nav-item-left nav-title"><a href="">Interactive Bio</a></li>
             <li class="nav-item-left nav-text"><a href="activities.html">Activities</a></li>
-            <li class="nav-item-right nav-text"><a href="">About</a></li>
+            <li class="nav-item-right nav-text"><a href="about.html">About</a></li>
         </ul>
 
         <div class="opening-img">
@@ -33,7 +33,7 @@
             </div><br><br><br>
    
             <a class="activity-btn" href="activities.html">Try Them Out Now</a>
-            <a class="learn-more"><u>Learn More</u></a><br><br>
+            <a class="learn-more" href="about.html"><u>Learn More</u></a><br><br>
         </div>
         <script src="../src/JS/home.js"></script>
     </body>
