--- a/HTML/activities.html
+++ b/HTML/activities.html
@@ -15,7 +15,7 @@
         <ul class="navbar">
             <li class="nav-item-left nav-title"><a href="home.html">Interactive Bio</a></li>
             <li class="nav-item-left nav-text"><a href="">Activities</a></li>
-            <li class="nav-item-right nav-text"><a href="">About</a></li>
+            <li class="nav-item-right nav-text"><a href="about.html">About</a></li>
         </ul>
 
         <br><br><br><br>
