--- a/HTML/about.html
+++ b/HTML/about.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/main-navbar.css">
+
+    <script src="https://kit.fontawesome.com/3c60254cfe.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <ul class="navbar">
@@ -16,8 +18,14 @@
         <li class="nav-item-right nav-text"><a href="about.html">About</a></li>
     </ul><br><br><br>
 
-    <div class="center" style="color: white;">
-        <h3>I'm just a highschool student makin websites.</h3>
+    <div class="center" style="color: white; width: 50%; margin: auto;">
+        <br><br><br><br>
+        <h3>I'm just a highschool student making interactive biology activities for school.</h3><br></br>
+        <h4>Have an idea for an activity or found an error?</h4><br>
+        <h4>You can contact me here:</h4><br>
+        <h4><i class="fa-solid fa-envelope"></i><a href="mailto: interactivebioactivities@gmail.com" style="text-decoration: none;">
+            interactivebioactivities@gmail.com
+        </a></h4>
     </div>
 </body>
 </html>
