--- a/HTML/home.html
+++ b/HTML/home.html
@@ -9,13 +9,18 @@
         <link rel="stylesheet" href="../CSS/main-navbar.css">
         <link rel="stylesheet" href="../CSS/home.css">
         <link rel="stylesheet" href="../CSS/style.css">
+        <link rel="stylesheet" href="../CSS/footer.css">
 
         <script src="https://kit.fontawesome.com/3c60254cfe.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <ul class="navbar">
+        <ul class="navbar light-navbar">
             <li class="nav-item-left nav-title"><a href="">Interactive Bio</a></li>
             <li class="nav-item-left nav-text"><a href="activities.html">Activities</a></li>
+            <!-- <label class="switch nav-item-left">
+                <input type="checkbox" checked>
+                <span class="slider round"></span>
+            </label> -->
             <li class="nav-item-right nav-text"><a href="about.html">About</a></li>
         </ul>
 
@@ -33,7 +38,30 @@
             </div><br><br><br>
    
             <a class="activity-btn" href="activities.html">Try Them Out Now</a>
-            <a class="learn-more" href="about.html"><u>Learn More</u></a><br><br>
+            <a class="learn-more" href="about.html"><u>Learn More</u></a><br><br><br>
+
+            <p class="fun-and-free">Test out your acuracy in each activity</p><br><br><br>
+        </div>
+        <div class="footer">
+            <div class="footer-div">
+                <div class="footer-item footer-interactive-bio"><a href="home.html">Interactive Bio</a></div>
+                <div class="footer-item"><a href="about.html">About</a></div>
+                <div class="footer-item"><a href="about.html#news-and-info">News & Updates</a></div>
+            </div>
+            <div class="footer-div">
+                <div class="footer-item footer-interactive-bio"><a href="">Activities</a></div>
+                <div class="footer-item"><a href="dna-coder.html">DNA Coder</a></div>
+                <div class="footer-item"><a href="genetic-simulation.html">Genetic Simulation</a></div>
+                <div class="footer-item"><a href="atom-creator.html">Atom Creator</a></div>
+                <div class="footer-item"><a href="activities.html">See them all</a></div>
+            </div>
+            <div class="footer-div">
+                <div class="footer-item footer-interactive-bio"><a href="">Contact</a></div>
+                <div class="footer-item"><i class="fa-solid fa-envelope"></i><a href="mailto: interactivebioactivities@gmail.com">
+                    interactivebioactivities@gmail.com
+                </a></div>
+                <div class="footer-item"><a href="about.html#send-a-message">Send a Message</a></div>
+            </div>
         </div>
         <script src="../src/JS/home.js"></script>
     </body>
