--- a/HTML/404.html
+++ b/HTML/404.html
@@ -7,6 +7,7 @@
     <title>404 Error</title>
 
     <link rel="stylesheet" href="../CSS/main-navbar.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
 </head>
 <body>
     <ul class="navbar">
@@ -20,7 +21,29 @@
     <div style="text-align: center; color: white;">
         <h1 style="font-size: 150px;">404</h1>
         <h1>Uh-Oh!</h1><br><br>
-        <h3>That page doesn't exist, but you can go <a href="home.html">here</a> to see all the activities offered.</h3>
+        <h3>That page doesn't exist, but you can go <a href="activities.html">here</a> to see all the activities offered.</h3>
+    </div><br><br><br>
+
+    <div class="footer">
+        <div class="footer-div">
+            <div class="footer-item footer-interactive-bio"><a href="home.html">Interactive Bio</a></div>
+            <div class="footer-item"><a href="about.html">About</a></div>
+            <div class="footer-item"><a href="about.html#news-and-info">News & Updates</a></div>
+        </div>
+        <div class="footer-div">
+            <div class="footer-item footer-interactive-bio"><a href="">Activities</a></div>
+            <div class="footer-item"><a href="dna-coder.html">DNA Coder</a></div>
+            <div class="footer-item"><a href="genetic-simulation.html">Genetic Simulation</a></div>
+            <div class="footer-item"><a href="atom-creator.html">Atom Creator</a></div>
+            <div class="footer-item"><a href="activities.html">See them all</a></div>
+        </div>
+        <div class="footer-div">
+            <div class="footer-item footer-interactive-bio"><a href="">Contact</a></div>
+            <div class="footer-item"><i class="fa-solid fa-envelope"></i><a href="mailto: interactivebioactivities@gmail.com">
+                interactivebioactivities@gmail.com
+            </a></div>
+            <div class="footer-item"><a href="about.html#send-a-message">Send a Message</a></div>
+        </div>
     </div>
 </body>
 </html>
