--- a/HTML/about.html
+++ b/HTML/about.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/main-navbar.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
 
     <script src="https://kit.fontawesome.com/3c60254cfe.js" crossorigin="anonymous"></script>
 </head>
@@ -25,7 +26,34 @@
         <h4>You can contact me here:</h4><br>
         <h4><i class="fa-solid fa-envelope"></i><a href="mailto: interactivebioactivities@gmail.com" style="text-decoration: none;">
             interactivebioactivities@gmail.com
-        </a></h4>
+        </a></h4><br><br>
+        <div id="send-a-message">
+
+        </div>
+        <div id="news-and-info">
+
+        </div><br><br><br>
+    </div>
+    <div class="footer">
+        <div class="footer-div">
+            <div class="footer-item footer-interactive-bio"><a href="home.html">Interactive Bio</a></div>
+            <div class="footer-item"><a href="about.html">About</a></div>
+            <div class="footer-item"><a href="about.html#news-and-info">News & Updates</a></div>
+        </div>
+        <div class="footer-div">
+            <div class="footer-item footer-interactive-bio"><a href="">Activities</a></div>
+            <div class="footer-item"><a href="dna-coder.html">DNA Coder</a></div>
+            <div class="footer-item"><a href="genetic-simulation.html">Genetic Simulation</a></div>
+            <div class="footer-item"><a href="atom-creator.html">Atom Creator</a></div>
+            <div class="footer-item"><a href="activities.html">See them all</a></div>
+        </div>
+        <div class="footer-div">
+            <div class="footer-item footer-interactive-bio"><a href="">Contact</a></div>
+            <div class="footer-item"><i class="fa-solid fa-envelope"></i><a href="mailto: interactivebioactivities@gmail.com">
+                interactivebioactivities@gmail.com
+            </a></div>
+            <div class="footer-item"><a href="about.html#send-a-message">Send a Message</a></div>
+        </div>
     </div>
 </body>
 </html>
