--- a/HTML/activities.html
+++ b/HTML/activities.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="../CSS/main-navbar.css">
         <link rel="stylesheet" href="../CSS/style.css">
         <link rel="stylesheet" href="../CSS/activities.css">
+        <link rel="stylesheet" href="../CSS/footer.css">
     </head>
     <body>
         <ul class="navbar">
@@ -62,6 +63,27 @@
                 <a href="atom-creator.html"><div class="activity-btn">Try This Activity</div></a>
             </div>
             <div class="activity-img atom"></div>
-        </div><br><br>
+        </div><br><br><br>
+        <div class="footer">
+            <div class="footer-div">
+                <div class="footer-item footer-interactive-bio"><a href="home.html">Interactive Bio</a></div>
+                <div class="footer-item"><a href="about.html">About</a></div>
+                <div class="footer-item"><a href="about.html#news-and-info">News & Updates</a></div>
+            </div>
+            <div class="footer-div">
+                <div class="footer-item footer-interactive-bio"><a href="">Activities</a></div>
+                <div class="footer-item"><a href="dna-coder.html">DNA Coder</a></div>
+                <div class="footer-item"><a href="genetic-simulation.html">Genetic Simulation</a></div>
+                <div class="footer-item"><a href="atom-creator.html">Atom Creator</a></div>
+                <div class="footer-item"><a href="activities.html">See them all</a></div>
+            </div>
+            <div class="footer-div">
+                <div class="footer-item footer-interactive-bio"><a href="">Contact</a></div>
+                <div class="footer-item"><i class="fa-solid fa-envelope"></i><a href="mailto: interactivebioactivities@gmail.com">
+                    interactivebioactivities@gmail.com
+                </a></div>
+                <div class="footer-item"><a href="about.html#send-a-message">Send a Message</a></div>
+            </div>
+        </div>
     </body>
 </html>
