--- a/HTML/about.html
+++ b/HTML/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/main-navbar.css">
     <link rel="stylesheet" href="../CSS/footer.css">
+    <link rel="stylesheet" href="../CSS/about.css">
 
     <script src="https://kit.fontawesome.com/3c60254cfe.js" crossorigin="anonymous"></script>
 </head>
@@ -19,7 +20,7 @@
         <li class="nav-item-right nav-text"><a href="about.html">About</a></li>
     </ul><br><br><br>
 
-    <div class="center" style="color: white; width: 50%; margin: auto;">
+    <div class="center" style="color: white; width: 100%; margin: auto;">
         <br><br><br><br>
         <h3>I'm just a highschool student making interactive biology activities for school.</h3><br></br>
         <h4>Have an idea for an activity or found an error?</h4><br>
@@ -27,11 +28,12 @@
         <h4><i class="fa-solid fa-envelope"></i><a href="mailto: interactivebioactivities@gmail.com" style="text-decoration: none;">
             interactivebioactivities@gmail.com
         </a></h4><br><br>
-        <div id="send-a-message">
-
-        </div>
-        <div id="news-and-info">
-
+        <h1 style="color: white;">News & Updates</h1><br>
+        <div id="news-and-info" style="width: 100%;">
+            <div class="update">
+                <p class="date">2/8/2023</p><br>
+                <p>Website is up and running</p>
+            </div>
         </div><br><br><br>
     </div>
     <div class="footer">
