Meta description tags

--- a/HTML/activities.html
+++ b/HTML/activities.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Interactive Biology Activities">
         <title>Activities</title>
+        <meta name="description" content="A list of fun and free biology activities that you can do. In each activity you can test out your accuracy.">
 
         <link rel="stylesheet" href="../CSS/main-navbar.css">
         <link rel="stylesheet" href="../CSS/style.css">
