--- a/HTML/genetic-simulation.html
+++ b/HTML/genetic-simulation.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Create random people and view the phenotypes and genotypes that they have.
-        You can also view what a potential baby could look like between a man and a woman.">
+        <meta name="description" content="Choose between three different DNA related matching activities and 
+        use the translation chart to translate RNA into it's corresponding Amino Acid.">
         <title>Genetic Simulation</title>
 
         <link rel="stylesheet" href="../CSS/main-navbar.css">
