--- a/HTML/home.html
+++ b/HTML/home.html
@@ -5,6 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Interactive Bio - Interactive Biology Activities</title>
+        <meta name="description" content="Complete Fun and Free activities and learn about all sorts of biology items such as Phenotypes, RNA, and Atoms.
+        All Activities have problems you can do so you can test your accuracy.">
 
         <link rel="stylesheet" href="../CSS/main-navbar.css">
         <link rel="stylesheet" href="../CSS/home.css">
