--- a/HTML/atom-creator.html
+++ b/HTML/atom-creator.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Atom Creator</title>
+        <meta name="description" content="Generate your own atom and view the element that corresponds with the atom created.">
 
         <link rel="stylesheet" href="../CSS/main-navbar.css">
         <link rel="stylesheet" href="../CSS/atom-creator.css">
