--- a/HTML/about.html
+++ b/HTML/about.html
@@ -7,6 +7,8 @@
     <title>About</title>
     <meta name="description" content="Learn more about interactive-bio.com. You can also contact the creator">
 
+    <link rel="icon" type="image/png" href="../Images/icon.png">
+
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/main-navbar.css">
     <link rel="stylesheet" href="../CSS/footer.css">
