--- a/HTML/activities.html
+++ b/HTML/activities.html
@@ -8,6 +8,8 @@
         <title>Activities</title>
         <meta name="description" content="A list of fun and free biology activities that you can do. In each activity you can test out your accuracy.">
 
+        <link rel="icon" type="image/png" href="../Images/icon.png">
+
         <link rel="stylesheet" href="../CSS/main-navbar.css">
         <link rel="stylesheet" href="../CSS/style.css">
         <link rel="stylesheet" href="../CSS/activities.css">
