--- a/HTML/atom-creator.html
+++ b/HTML/atom-creator.html
@@ -7,6 +7,8 @@
         <title>Atom Creator</title>
         <meta name="description" content="Generate your own atom and view the element that corresponds with the atom created.">
 
+        <link rel="icon" type="image/png" href="../Images/icon.png">
+
         <link rel="stylesheet" href="../CSS/main-navbar.css">
         <link rel="stylesheet" href="../CSS/atom-creator.css">
         <link rel="stylesheet" href="../CSS/style.css">
