--- a/HTML/genetic-simulation.html
+++ b/HTML/genetic-simulation.html
@@ -8,6 +8,8 @@
         use the translation chart to translate RNA into it's corresponding Amino Acid.">
         <title>Genetic Simulation</title>
 
+        <link rel="icon" type="image/png" href="../Images/icon.png">
+
         <link rel="stylesheet" href="../CSS/main-navbar.css">
         <link rel="stylesheet" href="../CSS/genetic-simulation.css">
         <link rel="stylesheet" href="../CSS/style.css">
