--- a/HTML/404.html
+++ b/HTML/404.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Error</title>
 
+    <link rel="icon" type="image/png" href="../Images/icon.png">
+
     <link rel="stylesheet" href="../CSS/main-navbar.css">
     <link rel="stylesheet" href="../CSS/footer.css">
 </head>
