--- a/HTML/home.html
+++ b/HTML/home.html
@@ -8,6 +8,8 @@
         <meta name="description" content="Complete Fun and Free activities and learn about all sorts of biology items such as Phenotypes, RNA, and Atoms.
         All Activities have problems you can do so you can test your accuracy.">
 
+        <link rel="icon" type="image/png" href="../Images/icon.png">
+
         <link rel="stylesheet" href="../CSS/main-navbar.css">
         <link rel="stylesheet" href="../CSS/home.css">
         <link rel="stylesheet" href="../CSS/style.css">
