--- a/HTML/404.html
+++ b/HTML/404.html
@@ -8,6 +8,8 @@
 
     <link rel="icon" type="image/png" href="../Images/icon.png">
 
+    <noscript>Please enable Javascript</noscript>
+
     <link rel="stylesheet" href="../CSS/main-navbar.css">
     <link rel="stylesheet" href="../CSS/footer.css">
 </head>
