--- a/HTML/home.html
+++ b/HTML/home.html
@@ -47,6 +47,7 @@
             <a class="learn-more" href="about.html"><u>Learn More</u></a><br><br><br>
 
             <p class="fun-and-free">Test out your acuracy in each activity</p><br><br><br>
+            <p class="accuracy-text">Global Accuracy</p>
         </div>
         <div class="footer">
             <div class="footer-div">
