--- a/HTML/home.html
+++ b/HTML/home.html
@@ -46,8 +46,13 @@
             <a class="activity-btn" href="activities.html">Try Them Out Now</a>
             <a class="learn-more" href="about.html"><u>Learn More</u></a><br><br><br>
 
-            <p class="fun-and-free">Test out your acuracy in each activity</p><br><br><br>
-            <p class="accuracy-text">Global Accuracy</p>
+            <p class="fun-and-free">Test out your accuracy in each activity</p><br><br><br>
+            <p class="accuracy-text">Global Accuracy</p><br>
+            <p class="accuracy-text-inline">Attempts: 0</p>
+            <p class="accuracy-text-inline">Accuracy: 0%</p><br>
+            <p class="accuracy-text">Session Accuracy</p><br>
+            <p class="accuracy-text-inline">Attempts: 0</p>
+            <p class="accuracy-text-inline">Accuracy: 0%</p><br><br><br>
         </div>
         <div class="footer">
             <div class="footer-div">
