Local And Session Storage

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -48,11 +48,11 @@
 
             <p class="fun-and-free">Test out your accuracy in each activity</p><br><br><br>
             <p class="accuracy-text">Global Accuracy</p><br>
-            <p class="accuracy-text-inline">Attempts: 0</p>
-            <p class="accuracy-text-inline">Accuracy: 0%</p><br>
+            <p class="accuracy-text-inline globalAttempt">Attempts: 0</p>
+            <p class="accuracy-text-inline globalAccuracy">Accuracy: 0%</p><br>
             <p class="accuracy-text">Session Accuracy</p><br>
-            <p class="accuracy-text-inline">Attempts: 0</p>
-            <p class="accuracy-text-inline">Accuracy: 0%</p><br><br><br>
+            <p class="accuracy-text-inline sessionAttempt">Attempts: 0</p>
+            <p class="accuracy-text-inline sessionAccuracy">Accuracy: 0%</p><br><br><br>
         </div>
         <div class="footer">
             <div class="footer-div">
@@ -74,6 +74,8 @@
                 </a></div>
             </div>
         </div>
+        <div class="clearData" onclick="clearData()">Clear Data</div>
+        <script src="../src/JS/globals.js"></script>
         <script src="../src/JS/home.js"></script>
     </body>
 </html>
