--- a/HTML/atom-creator.html
+++ b/HTML/atom-creator.html
@@ -93,6 +93,7 @@
             </div>
         </div>
         
+        <script src="../src/JS/globals.js"></script>
         <script src="../src/JS/periodic-table.js"></script>
         <script src="../src/JS/atom-creator.js"></script>
     </body>
