--- a/HTML/genetic-simulation.html
+++ b/HTML/genetic-simulation.html
@@ -82,6 +82,7 @@
             </div>
         </div>
 
+        <script src="../src/JS/globals.js"></script>
         <script src="../src/JS/genetic-simulation-person.js"></script>
         <script src="../src/JS/genetic-simulation.js"></script>
     </body>
