--- a/HTML/atom-creator.html
+++ b/HTML/atom-creator.html
@@ -24,7 +24,7 @@
         </ul><br><br><br>
 
         <div class="center">
-            <div class="atom-creator-title">Atom Creator</div><br>
+            <div class="activity-title">Atom Creator</div><br>
             <button class="transition-btn" onclick="pressTrySomeProblems()">Try Some Problems</button>
         </div>
 
