--- a/HTML/genetic-simulation.html
+++ b/HTML/genetic-simulation.html
@@ -24,7 +24,7 @@
             <li class="nav-item-right nav-text"><a href="about.html">About</a></li>
         </ul><br><br><br><br>
        
-        <div class="genetic-simulation-title">Genetic Simulation</div><br>
+        <div class="activity-title">Genetic Simulation</div><br>
 
         
         <div class="center">
