--- a/HTML/cell-labeler.html
+++ b/HTML/cell-labeler.html
@@ -12,7 +12,7 @@
         <noscript>Please enable Javascript</noscript>
 
         <link rel="stylesheet" href="../CSS/main-navbar.css">
-        <link rel="stylesheet" href="../CSS/dna-coder.css">
+        <link rel="stylesheet" href="../CSS/cell-labeler.css">
         <link rel="stylesheet" href="../CSS/style.css">
         <link rel="stylesheet" href="../CSS/footer.css">
     </head>
@@ -22,15 +22,17 @@
             <li class="nav-item-left nav-text"><a href="activities.html">Activities</a></li>
             <li class="nav-item-right nav-text"><a href="about.html">About</a></li>
         </ul><br><br><br><br>
-        <div class="dna-coder-title">Cell Labeler</div><br><br>
+        <div class="activity-title">Cell Labeler</div><br><br>
         <a 
             title="OpenStax, CC BY 4.0 &lt;https://creativecommons.org/licenses/by/4.0&gt;, via Wikimedia Commons" 
-            href="https://commons.wikimedia.org/wiki/File:0312_Animal_Cell_and_Components.jpg">
+            href="https://commons.wikimedia.org/wiki/File:0312_Animal_Cell_and_Components.jpg"
+            class="cell-image">
             <img 
                 width="512" 
                 alt="0312 Animal Cell and Components" 
-                src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/0312_Animal_Cell_and_Components.jpg/512px-0312_Animal_Cell_and_Components.jpg">
-        </a>
+                src="../Images/cell.png"
+                class="cell-image">
+        </a><br><br><br><br>
         <div class="footer">
             <div class="footer-div">
                 <div class="footer-item footer-interactive-bio"><a href="home.html">Interactive Bio</a></div>
