--- a/HTML/cell-labeler.html
+++ b/HTML/cell-labeler.html
@@ -23,16 +23,23 @@
             <li class="nav-item-right nav-text"><a href="about.html">About</a></li>
         </ul><br><br><br><br>
         <div class="activity-title">Cell Labeler</div><br><br>
-        <a 
-            title="OpenStax, CC BY 4.0 &lt;https://creativecommons.org/licenses/by/4.0&gt;, via Wikimedia Commons" 
-            href="https://commons.wikimedia.org/wiki/File:0312_Animal_Cell_and_Components.jpg"
-            class="cell-image">
-            <img 
-                width="512" 
-                alt="0312 Animal Cell and Components" 
-                src="../Images/cell.png"
+        <div class="image-container">
+            <div class="radio-button" style="left: calc(15vw + 15.5%); top: 26%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 18%); top: 15.8%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 24.3%); top: 5.7%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 43.3%); top: 1%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 53.3%); top: 8%;"></div>
+            <a 
+                title="OpenStax, CC BY 4.0 &lt;https://creativecommons.org/licenses/by/4.0&gt;, via Wikimedia Commons" 
+                href="https://commons.wikimedia.org/wiki/File:0312_Animal_Cell_and_Components.jpg"
                 class="cell-image">
-        </a><br><br><br><br>
+                <img 
+                    width="512" 
+                    alt="0312 Animal Cell and Components" 
+                    src="../Images/cell.png"
+                    class="cell-image">
+                </a>
+        </div><br><br><br><br>
         <div class="footer">
             <div class="footer-div">
                 <div class="footer-item footer-interactive-bio"><a href="home.html">Interactive Bio</a></div>
