All Radio Buttons

--- a/HTML/cell-labeler.html
+++ b/HTML/cell-labeler.html
@@ -24,11 +24,25 @@
         </ul><br><br><br><br>
         <div class="activity-title">Cell Labeler</div><br><br>
         <div class="image-container">
+            <div class="radio-button" style="left: calc(15vw + 3.3%); top: 68.5%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 7.3%); top: 56.5%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 9.3%); top: 85.8%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 8.3%); top: 46%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 11.3%); top: 38%;"></div> 
             <div class="radio-button" style="left: calc(15vw + 15.5%); top: 26%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 16.3%); top: 96%;"></div>
             <div class="radio-button" style="left: calc(15vw + 18%); top: 15.8%;"></div>
             <div class="radio-button" style="left: calc(15vw + 24.3%); top: 5.7%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 31%); top: 96%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 42%); top: 86.5%;"></div>
             <div class="radio-button" style="left: calc(15vw + 43.3%); top: 1%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 48%); top: 81.5%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 53%); top: 72%;"></div>
             <div class="radio-button" style="left: calc(15vw + 53.3%); top: 8%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 56.8%); top: 61.7%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 58.5%); top: 24.5%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 59.3%); top: 46%;"></div>
+            <div class="radio-button" style="left: calc(15vw + 59.3%); top: 36%;"></div>
             <a 
                 title="OpenStax, CC BY 4.0 &lt;https://creativecommons.org/licenses/by/4.0&gt;, via Wikimedia Commons" 
                 href="https://commons.wikimedia.org/wiki/File:0312_Animal_Cell_and_Components.jpg"
